--- a/style.css
+++ b/style.css
@@ -1,24 +1,18 @@
- /* Container holding the image and the text */
-.container {
-  position: relative;
-  text-align: center;
-}
+div.name {
 
-/* Centered text */
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+	top: 50%;
+	position: absolute;
+	width: 100%;
+	text-align: center;
+	margin-top: -200px;
+
 }
 
 h1{
 	font-family: 'Source Sans Pro', sans-serif;
 	font-size:  84px;
 	font-weight: 600;
-	margin-bottom: 10px;
-	color: white;
-	text-shadow: 4px 5px 3px rgba(255,255,255,0.5);
+	margin-bottom: -5px;
 }
 
 p{
@@ -27,17 +21,10 @@ p{
 	font-weight: 200;
 }
 
-img{
-	filter: brightness(130%);
-	filter: blur(2px);
-}
-
 a:link, a:visited {
-  color: white;
+  color: black;
   text-align: center;
   text-decoration: none;
-  background-color: 00C961;
-  padding: 14px 25px;
 }
 
 a:hover, a:active {
