--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,9 @@
 @charset "utf-8";
 
 body {
-	color: black;
-	margin: 10px;
-	padding: 5px;
+  color: black;
+  margin: 10px;
+  padding: 5px;
   background-image: url("../images/pattern.jpg");
 }
 
@@ -21,12 +21,12 @@ h2 {
 }
 
 p {
-	font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 18px;
 }
 
 div {
-	font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 .button {
@@ -37,27 +37,28 @@ div {
 .button:hover {
   background-color: #4CAF50;
   color: white;
-  
+
 }
 
 #dataVal {
-	width: 5em;
+  width: 5em;
 }
 
 input {
-	padding: 10px;
-	margin-bottom: 10px;
-	font-family: 'Poppins', sans-serif;
-	border-radius: 10px;
-	-webkit-transition-duration: 0.4s; /* Safari */
-	transition-duration: 0.4s;
-  background-color: white; 
-  color: black; 
+  padding: 10px;
+  margin-bottom: 10px;
+  font-family: 'Poppins', sans-serif;
+  border-radius: 10px;
+  -webkit-transition-duration: 0.4s;
+  /* Safari */
+  transition-duration: 0.4s;
+  background-color: white;
+  color: black;
   border: 2px solid #8c2633;
 }
 
 input:focus {
-	outline:none;
+  outline: none;
 }
 
 input:hover {
@@ -66,57 +67,88 @@ input:hover {
 }
 
 #result {
-	font-size: 1.3em;
+  font-size: 1.3em;
 }
 
 .switch {
-	align-self: flex-end;
+  align-self: flex-end;
 }
+
 .inner-switch {
-    display: inline-block;
-    cursor: pointer;
-    border: 1px solid #555;
-    border-radius: 1.25rem;
-    width: 3.125rem;
-    text-align: center;
-    font-size: 1rem;
-    padding: 0.1875rem;
-    margin-left: 0.3125rem;
+  display: inline-block;
+  cursor: pointer;
+  border: 1px solid #555;
+  border-radius: 1.25rem;
+  width: 3.125rem;
+  text-align: center;
+  font-size: 1rem;
+  padding: 0.1875rem;
+  margin-left: 0.3125rem;
 }
 
 #myInput {
-    width: 70vw; /* Full-width */
-    font-size: 16px; /* Increase font-size */
-    padding-top: 12px;
-    padding-right: 10px;
-    padding-left: 12px;
-    padding-bottom: 12px; /* Add some padding */
-    border: 1px solid #ddd; /* Add a grey border */
-    margin-bottom: 16px; /* Add some space below the input */
+  width: 70vw;
+  /* Full-width */
+  font-size: 16px;
+  /* Increase font-size */
+  padding-top: 12px;
+  padding-right: 10px;
+  padding-left: 12px;
+  padding-bottom: 12px;
+  /* Add some padding */
+  border: 1px solid #ddd;
+  /* Add a grey border */
+  margin-bottom: 16px;
+  /* Add some space below the input */
 }
 
 #myTable {
-  border-collapse: collapse; /* Collapse borders */
-  width: 100%; /* Full-width */
-  font-size: 18px; /* Increase font-size */
+  border-collapse: collapse;
+  /* Collapse borders */
+  width: 100%;
+  /* Full-width */
+  font-size: 18px;
+  /* Increase font-size */
 }
 
-#myTable th, #myTable td {
-  text-align: left; /* Left-align text */
-  padding: 12px; /* Add padding */
+.tableFixHead {
+  overflow-y: auto;
+  height: 400px;
+}
+
+.tableFixHead thead th {
+  position: sticky;
+  top: 0;
+}
+
+#myTable th {
+  background: #eee;
+}
+
+#myTable th,
+#myTable td {
+  text-align: left;
+  /* Left-align text */
+  padding: 12px;
+  /* Add padding */
+}
+
+#myTable td {
   background-color: hsla(0, 50%, 80%, 0.3);
 }
 
-#myTable tr {/* Add a bottom border to all table rows */
+#myTable tr {
+  /* Add a bottom border to all table rows */
   border-bottom: 1px solid #000;
 }
 
-#myTable tr:hover {/* Add a grey background color to the table header and on hover */
-  background-color: rgba(0,0,0,0.2);
+#myTable tr:hover {
+  /* Add a grey background color to the table header and on hover */
+  background-color: rgba(0, 0, 0, 0.2);
   border-right: 1px solid #000;
   border-left: 1px solid #000;
 }
 
 #myTable tr.header {
-  background-color: rgba(0,0,0,0.2);
+  background-color: rgba(0, 0, 0, 0.2);
 }
