--- a/css/styles.css
+++ b/css/styles.css
@@ -30,14 +30,13 @@ div {
 }
 
 .button {
-  border: 2px solid #4CAF50;
+  border: 0.25em solid /*#4CAF50*/#b51144;
   background-color: white;
 }
 
 .button:hover {
-  background-color: #4CAF50;
-  color: white;
-
+  border: 0.25em solid #4CAF50;
+  background-color: #b51144;
 }
 
 #dataVal {
@@ -64,6 +63,11 @@ input:focus {
 input:hover {
   background-color: #8c2633;
   color: white;
+}
+
+a.byStormy {
+  text-decoration:  none;
+  color: black;
 }
 
 #result {
