Fixed button sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,8 @@ div {
 }
 
 input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
   padding: 10px;
   margin-bottom: 10px;
   font-family: 'Poppins', sans-serif;
